DT-1789, DT-1804 - basket summary fix in mobile and product input aligned

--- a/css/ecommerce.less
+++ b/css/ecommerce.less
@@ -146,7 +146,7 @@
         }
         input {
         	max-width: 170px;
-            height: 36px;
+            height: 38px;
             border: 1px solid darken(@color-swatch1,10%);
         	background-color: darken(@color-swatch1,4%);
         	-webkit-appearance: none;
@@ -727,11 +727,11 @@
         }
         tr:last-child td:last-child {
             @media (max-width: 360px) {
-                border-top: 0;
-                margin-top: 0;
+                border: 1px solid transparent;
+                margin-top: 20px;
                 padding-top: 0;
             }
-}
+    }
     .basket-summary-items {
       background: transparent;
       @media @tablet {
